250607 버그 수정